# brainbow

./: .gitignore  LICENSE  MANIFEST.in  README.md  brain_paint.py  process_image.py  pyproject.toml  requirements.txt  setup.cfg
src/: colormaps.py  data_load.py  nipy.py  slicer.py  utils.py
