[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-paint"
version = "0.0.5"
authors = [
    {author = "Pavel Popov", email = "paavali.popov@gmail.com"},
    {author = "Sergey Plis", email = "s.m.plis@gmail.com"},
]
description = "Script for visualizing ICA/ROI brain parcellation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/neuroneural/brain-paint"
"Bug Tracker" = "https://github.com/neuroneural/brain-paint/issues"
