[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "brainbow"
version = "0.1.8"
authors = [
    {name = "Pavel Popov", email = "paavali.popov@gmail.com"},
    {name = "Sergey Plis", email = "s.m.plis@gmail.com"},
]
description = "Script for visualizing ICA/ROI brain parcellation"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/neuroneural/brainbow"
"Bug Tracker" = "https://github.com/neuroneural/brainbow/issues"

[project.scripts]
brainbow = "process_image:parse"